syntax = "proto3";

package Minio;
  
// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./Minio";

message IdRequest {
    string id = 1;
}
  
message MinioResponse {
    // 用户id
    string id = 1;
    // 用户名称
    string name = 2;
    // 用户性别
    string gender = 3;
}
  
service Minio {
    rpc getMinio(IdRequest) returns(MinioResponse);
}